# billiards-coach

./: .gitignore  Cargo.toml  README.md
.github/workflows/: track-match.yml
crates/billiards-cli/: Cargo.toml
crates/billiards-cli/src/: main.rs  match_cmd.rs  track_cmd.rs
crates/billiards-core/: Cargo.toml
crates/billiards-core/src/: ball.rs  lib.rs  math.rs  scene.rs  scoring.rs  simulation.rs  table.rs  trajectory.rs
crates/billiards-engine/: Cargo.toml
crates/billiards-engine/examples/: diamond_system.rs
crates/billiards-engine/src/: collision.rs  cushion.rs  lib.rs  sim.rs  world.rs
crates/billiards-engine/tests/: collision.rs  cushion.rs  diamond.rs  single_ball.rs
crates/billiards-solver/: Cargo.toml
crates/billiards-solver/examples/: calibrate_match.rs  calibrate_shots.rs  chain_events.rs  collision_check.rs  collision_deflection.rs  collision_events.rs  compare_dump.rs  cushion_events.rs  error_profile.rs  fit_csv.rs  launch_audit.rs  player_stats.rs  recon_diag.rs  reconstruct_hit.rs  roll_decel.rs  ruling_check.rs  ruling_why.rs  skeleton_diag.rs  snapshot_recon.rs  solve_scene.rs  spin_check.rs  verify_match.rs
crates/billiards-solver/src/: calibrate.rs  fit.rs  lib.rs  measure.rs  par.rs  rng.rs  shotfile.rs
crates/billiards-solver/tests/: calibrate.rs  fit.rs  solve.rs
crates/billiards-ui/: Cargo.toml
crates/billiards-ui/src/: main.rs  view.rs
crates/billiards-viewer/: Cargo.toml
crates/billiards-viewer/src/: lib.rs  main.rs
crates/billiards-vision/: Cargo.toml
crates/billiards-vision/examples/: onnx_detect.rs  reconstruct_demo.rs  snapshot_tracks.rs  track_frames.rs
crates/billiards-vision/src/: detect.rs  homography.rs  lib.rs  onnx.rs  reconstruct.rs  render.rs  track.rs
crates/billiards-vision/tests/: pipeline.rs
docs/: DESIGN.md
python/: align_shots.py  annotate_results.py  build_match.py  capture_live.py  compare_video.py  detect_shots.py  detector.py  digit_templates.npz  eval_frames.py  export_onnx.py  extract_1080_shots.py  finetune_detector.py  fix_swaps.py  harvest_digits.py  ingest.py  make_bundle_direct.py  pipeline.py  publish_bundle.py  reconcile_banner.py  reconstruct_frame.py  requirements.txt  scoreboard.py  segment_games.py  solve_labels.py  synth_data.py  track.py  track_shots.py  verify_banner.py  zero_template.npy
python/web/watcher/.wrangler/cache/: wrangler-account.json
reports/: README.md  processed_1783272696.md  processed_1783274832.md  processed_1783346101.md  processed_1783346283.md  report_1783345999.md  report_1783346009.md  report_1783346064.md  report_1783346144.md  report_1783346181.md  report_1783346370.md  report_1783346452.md  report_1783346506.md  report_1783346611.md  report_1783346650.md  report_1783346698.md
snapshots/: README.md
snapshots/recon/: data_masa4_day_game_00.tsv  data_masa4_day_game_01.tsv  data_masa4_day_game_02.tsv  data_masa4_day_game_03.tsv  data_masa4_day_game_04.tsv  data_masa4_game_00.tsv
snapshots/tracks/: cur_s12.rows  cur_s15.rows  day00_s23.rows  day00_s35.rows  day01_s02.rows  day02_s20.rows  day02_s93.rows  day03_s05.rows  day03_s101.rows  day04_s112.rows  manifest.txt
web/: build.sh  index.html
web/watcher/: wrangler.toml
web/watcher/src/: index.js
