[package]
name = "billiards-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "billiards-ui"
path = "src/main.rs"

[dependencies]
billiards-core = { workspace = true }
billiards-engine = { workspace = true }
billiards-solver = { workspace = true }
billiards-vision = { workspace = true }
eframe = "0.29"
egui = "0.29"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
