[package]
name = "billiards-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true

# cdylib for the wasm-bindgen web build; rlib so the native bin target links.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
billiards-core = { workspace = true }
billiards-engine = { workspace = true }
billiards-solver = { workspace = true }
billiards-vision = { workspace = true }
eframe = "0.29"
egui = "0.29"
ehttp = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "Element", "HtmlCanvasElement", "HtmlVideoElement", "HtmlMediaElement", "HtmlElement", "Node", "CanvasRenderingContext2d", "ImageData", "CssStyleDeclaration"] }
